[gd_scene load_steps=35 format=3]

[ext_resource type="Script" path="res://Script/Main_menu/Map_5.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cr1345oq5wgq4" path="res://Art/Game_3/LevelButtonIcon/byg.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bdwhqtvxvvfj" path="res://Art/Game_3/LevelButtonIcon/jxm_1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bnqi8h1suoxhm" path="res://Art/Game_3/LevelButtonIcon/jxm_2.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cajwg3803gb7v" path="res://Art/Game_3/LevelButtonIcon/zjm_1.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dq3fuqnoj5k21" path="res://Art/Game_3/LevelButtonIcon/zjm_2.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dlsvha6ir473r" path="res://Art/Game_3/LevelButtonIcon/lxm_1.png" id="7"]
[ext_resource type="Texture2D" uid="uid://chrh3a4ta4jci" path="res://Art/Game_3/LevelButtonIcon/lxm_2.png" id="8"]
[ext_resource type="Texture2D" uid="uid://b4w8b0yt2vl52" path="res://Art/Game_3/LevelButtonIcon/zjg_1.png" id="9"]
[ext_resource type="Texture2D" uid="uid://byfmms3h6wiai" path="res://Art/Game_3/LevelButtonIcon/zjg_2.png" id="10"]
[ext_resource type="Texture2D" uid="uid://st5quwd40pmf" path="res://Art/Game_3/LevelButtonIcon/xxm_1.png" id="11"]
[ext_resource type="Texture2D" uid="uid://dw1acivcbaqc7" path="res://Art/Game_3/LevelButtonIcon/xxm_2.png" id="12"]
[ext_resource type="Texture2D" uid="uid://t3m28ioyry0w" path="res://Art/Game_3/LevelButtonIcon/jjg_1.png" id="13"]
[ext_resource type="Texture2D" uid="uid://dwpoho3twoj0y" path="res://Art/Game_3/LevelButtonIcon/jjg_2.png" id="14"]
[ext_resource type="Texture2D" uid="uid://dmsmcbcit8ag1" path="res://Art/Game_3/OtherMapButton/1047.png" id="15"]
[ext_resource type="Texture2D" uid="uid://bskgpjkp36bjg" path="res://Art/Game_3/OtherMapButton/1049.png" id="16"]
[ext_resource type="Texture2D" uid="uid://c5mihucvpttch" path="res://Art/Game_3/OtherMapButton/1052.png" id="17"]
[ext_resource type="Texture2D" uid="uid://bn63n7wbbgpl4" path="res://Art/Game_3/OtherMapButton/1054.png" id="18"]
[ext_resource type="Texture2D" uid="uid://jdwx4m73nv6q" path="res://Art/Game_3/OtherMapButton/1029.png" id="19"]
[ext_resource type="Texture2D" uid="uid://bsem68is1x5or" path="res://Art/Game_3/OtherMapButton/1031.png" id="20"]
[ext_resource type="Texture2D" uid="uid://nimphxpgf7r1" path="res://Art/Game_3/OtherMapButton/1034.png" id="21"]
[ext_resource type="Texture2D" uid="uid://dpr38rjgrqbxe" path="res://Art/Game_3/OtherMapButton/1036.png" id="22"]
[ext_resource type="Texture2D" uid="uid://bh6kd6lrpu1b8" path="res://Art/Game_3/OtherMapButton/1066.png" id="23"]
[ext_resource type="Texture2D" uid="uid://rev8hi22lj1a" path="res://Art/Game_3/OtherMapButton/1068.png" id="24"]
[ext_resource type="Texture2D" uid="uid://by7i44kgpko5q" path="res://Art/Game_3/OtherMapButton/1057.png" id="25"]
[ext_resource type="Texture2D" uid="uid://bp6iw3qmguhjn" path="res://Art/Game_3/OtherMapButton/1059.png" id="26"]
[ext_resource type="Texture2D" uid="uid://cidk7lvojej5l" path="res://Art/Game_3/OtherMapButton/1042.png" id="27"]
[ext_resource type="Texture2D" uid="uid://evh8y0jghgbk" path="res://Art/Game_3/OtherMapButton/1044.png" id="28"]
[ext_resource type="Texture2D" uid="uid://u1vbbr2whrp5" path="res://Art/Game_3/OtherMapButton/1165.png" id="29"]
[ext_resource type="Texture2D" uid="uid://bpcca4w541p3g" path="res://Art/Game_3/OtherMapButton/1166.png" id="30"]
[ext_resource type="Texture2D" uid="uid://caxlok5w68jux" path="res://Art/Game_3/OtherMapButton/gg_1.png" id="31"]
[ext_resource type="Texture2D" uid="uid://bs07y1cjseo8t" path="res://Art/Game_3/OtherMapButton/gg_2.png" id="32"]
[ext_resource type="Texture2D" uid="uid://bpmfisj6jl2ma" path="res://Art/Game_3/OtherMapButton/dy_1.png" id="33"]
[ext_resource type="Texture2D" uid="uid://d1dkij3oqtqyh" path="res://Art/Game_3/OtherMapButton/dy_2.png" id="34"]

[node name="Map_5" type="Node2D"]
script = ExtResource( "1" )

[node name="Byg" type="Sprite2D" parent="."]
position = Vector2(469, 295)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="LDL" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Level_40" type="TextureButton" parent="."]
offset_left = 91.0
offset_top = 461.0
offset_right = 131.0
offset_bottom = 501.0
texture_normal = ExtResource( "3" )
texture_pressed = ExtResource( "3" )
texture_hover = ExtResource( "4" )
texture_disabled = ExtResource( "3" )
ignore_texture_size = true
stretch_mode = 3
metadata/_edit_lock_ = true

[node name="Level_41" type="TextureButton" parent="."]
offset_left = 183.0
offset_top = 303.0
offset_right = 223.0
offset_bottom = 343.0
texture_normal = ExtResource( "5" )
texture_pressed = ExtResource( "5" )
texture_hover = ExtResource( "6" )
texture_disabled = ExtResource( "5" )
ignore_texture_size = true
stretch_mode = 3
metadata/_edit_lock_ = true

[node name="Level_42" type="TextureButton" parent="."]
offset_left = 286.0
offset_top = 249.0
offset_right = 326.0
offset_bottom = 289.0
texture_normal = ExtResource( "7" )
texture_pressed = ExtResource( "7" )
texture_hover = ExtResource( "8" )
texture_disabled = ExtResource( "7" )
ignore_texture_size = true
stretch_mode = 3
metadata/_edit_lock_ = true

[node name="Level_43" type="TextureButton" parent="."]
offset_left = 539.0
offset_top = 340.0
offset_right = 579.0
offset_bottom = 380.0
texture_normal = ExtResource( "9" )
texture_pressed = ExtResource( "9" )
texture_hover = ExtResource( "10" )
texture_disabled = ExtResource( "9" )
ignore_texture_size = true
stretch_mode = 3
metadata/_edit_lock_ = true

[node name="Level_44" type="TextureButton" parent="."]
offset_left = 704.0
offset_top = 286.0
offset_right = 744.0
offset_bottom = 326.0
texture_normal = ExtResource( "11" )
texture_pressed = ExtResource( "11" )
texture_hover = ExtResource( "12" )
texture_disabled = ExtResource( "11" )
ignore_texture_size = true
stretch_mode = 3
metadata/_edit_lock_ = true

[node name="Level_45" type="TextureButton" parent="."]
offset_left = 827.0
offset_top = 323.0
offset_right = 867.0
offset_bottom = 363.0
texture_normal = ExtResource( "13" )
texture_pressed = ExtResource( "13" )
texture_hover = ExtResource( "14" )
texture_disabled = ExtResource( "13" )
ignore_texture_size = true
stretch_mode = 3
metadata/_edit_lock_ = true

[node name="Level_46" type="TextureButton" parent="."]
offset_left = 456.0
offset_top = 156.0
offset_right = 496.0
offset_bottom = 196.0
ignore_texture_size = true
stretch_mode = 3
metadata/_edit_lock_ = true

[node name="MemoryClass" type="TextureButton" parent="."]
offset_top = 520.0
offset_right = 67.0
offset_bottom = 589.0
texture_normal = ExtResource( "15" )
texture_pressed = ExtResource( "15" )
texture_hover = ExtResource( "16" )
texture_disabled = ExtResource( "15" )
metadata/_edit_lock_ = true

[node name="Shop" type="TextureButton" parent="."]
offset_left = 65.0
offset_top = 520.0
offset_right = 132.0
offset_bottom = 589.0
texture_normal = ExtResource( "17" )
texture_pressed = ExtResource( "17" )
texture_hover = ExtResource( "18" )
texture_disabled = ExtResource( "17" )
metadata/_edit_lock_ = true

[node name="LDL2" type="TextureButton" parent="."]
offset_left = 130.0
offset_top = 520.0
offset_right = 197.0
offset_bottom = 589.0
texture_normal = ExtResource( "19" )
texture_pressed = ExtResource( "19" )
texture_hover = ExtResource( "20" )
texture_disabled = ExtResource( "19" )
metadata/_edit_lock_ = true

[node name="Skill" type="TextureButton" parent="."]
offset_left = 195.0
offset_top = 520.0
offset_right = 262.0
offset_bottom = 589.0
texture_normal = ExtResource( "21" )
texture_pressed = ExtResource( "21" )
texture_hover = ExtResource( "22" )
texture_disabled = ExtResource( "21" )
metadata/_edit_lock_ = true

[node name="Activity" type="TextureButton" parent="."]
offset_left = 260.0
offset_top = 520.0
offset_right = 327.0
offset_bottom = 589.0
texture_normal = ExtResource( "23" )
texture_pressed = ExtResource( "23" )
texture_hover = ExtResource( "24" )
texture_disabled = ExtResource( "23" )
metadata/_edit_lock_ = true

[node name="Task" type="TextureButton" parent="."]
offset_left = 325.0
offset_top = 520.0
offset_right = 392.0
offset_bottom = 588.0
texture_normal = ExtResource( "25" )
texture_pressed = ExtResource( "25" )
texture_hover = ExtResource( "26" )
texture_disabled = ExtResource( "25" )
metadata/_edit_lock_ = true

[node name="Return" type="TextureButton" parent="."]
offset_left = 390.0
offset_top = 520.0
offset_right = 457.0
offset_bottom = 589.0
texture_normal = ExtResource( "27" )
texture_pressed = ExtResource( "27" )
texture_hover = ExtResource( "28" )
texture_disabled = ExtResource( "27" )
metadata/_edit_lock_ = true

[node name="GameSet" type="TextureButton" parent="."]
offset_left = 259.0
offset_top = 460.0
offset_right = 327.0
offset_bottom = 530.0
texture_normal = ExtResource( "29" )
texture_pressed = ExtResource( "29" )
texture_hover = ExtResource( "30" )
texture_disabled = ExtResource( "29" )
metadata/_edit_lock_ = true

[node name="GameAn" type="TextureButton" parent="."]
offset_left = 324.0
offset_top = 460.0
offset_right = 393.0
offset_bottom = 531.0
texture_normal = ExtResource( "31" )
texture_pressed = ExtResource( "31" )
texture_hover = ExtResource( "32" )
texture_disabled = ExtResource( "31" )
metadata/_edit_lock_ = true

[node name="Pellet" type="TextureButton" parent="."]
offset_left = 389.0
offset_top = 460.0
offset_right = 458.0
offset_bottom = 531.0
texture_normal = ExtResource( "33" )
texture_pressed = ExtResource( "33" )
texture_hover = ExtResource( "34" )
texture_disabled = ExtResource( "33" )
metadata/_edit_lock_ = true

[connection signal="pressed" from="Level_40" to="." method="_on_level_40_pressed" flags=18]
[connection signal="pressed" from="Level_41" to="." method="_on_level_41_pressed" flags=18]
[connection signal="pressed" from="Level_42" to="." method="_on_level_42_pressed" flags=18]
[connection signal="pressed" from="Level_43" to="." method="_on_level_43_pressed" flags=18]
[connection signal="pressed" from="Level_44" to="." method="_on_level_44_pressed" flags=18]
[connection signal="pressed" from="Level_45" to="." method="_on_level_45_pressed" flags=18]
[connection signal="pressed" from="Level_46" to="." method="_on_level_46_pressed" flags=18]
[connection signal="pressed" from="MemoryClass" to="." method="_on_memory_class_pressed" flags=18]
[connection signal="pressed" from="Shop" to="." method="_on_shop_pressed" flags=18]
[connection signal="pressed" from="LDL2" to="." method="_on_ldl_2_pressed" flags=18]
[connection signal="pressed" from="Skill" to="." method="_on_skill_pressed" flags=18]
[connection signal="pressed" from="Activity" to="." method="_on_activity_pressed" flags=18]
[connection signal="pressed" from="Task" to="." method="_on_task_pressed" flags=18]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed" flags=18]
[connection signal="pressed" from="GameSet" to="." method="_on_game_set_pressed" flags=18]
[connection signal="pressed" from="GameAn" to="." method="_on_game_an_pressed" flags=18]
[connection signal="pressed" from="Pellet" to="." method="_on_pellet_pressed" flags=18]
